--- a/news-JS-main/package.json
+++ b/news-JS-main/package.json
@@ -2,6 +2,7 @@
     "name": "NewsJS",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "webpack.base.config.js",
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
